dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-rollouts-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argo-rollouts-dashboard
  template:
    metadata:
      labels:
        app: argo-rollouts-dashboard
    spec:
      serviceAccountName: argo-rollouts-dashboard
      containers:
      - name: argo-rollouts-dashboard
        image: quay.io/argoproj/kubectl-argo-rollouts:master
        # command: ["/bin/kubectl-argo-rollouts"]
        # args: ["dashboard", "-n", "argocd-rollouts" ]
        ports:
        - name: http
          containerPort: 3100
          protocol: TCP
