dashboard/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-dashboard
  namespace: argocd-dashboard
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 3100
  selector:
    app: rollout-dashboard
  sessionAffinity: None
  type: ClusterIP
