dashboard/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts-dashboard-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`rollout-dashboard-test.local`)
    kind: Rule
    services:
    - name: argo-rollouts-dashboard
      port: 3100
      namespace: argocd-rollouts
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`rollout-dashboard-test.local`)
    kind: Rule
    services:
    - name: argo-rollouts-dashboard
      port: 3100
      namespace: argocd-rollouts
  tls: {}
